--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   ],
   "minimum-stability": "stable",
   "require": {
+    "php": "^7.1.3",
     "monolog/monolog": "^1.23"
   },
   "autoload": {
