--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.1.3",
+  },
+  "require-dev": {
     "monolog/monolog": "^1.23"
   },
   "autoload": {
